<?xml version="1.0" encoding="utf-8"?>
<androidx.wear.widget.BoxInsetLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity"
    tools:ignore="MissingClass">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/android_background"
        android:scaleType="centerCrop"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="35dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnAddExpense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/btn_add_expense"
                android:textSize="15sp"
                android:backgroundTint="@color/blue"
                app:strokeWidth="2dp"
                app:strokeColor="@color/white"
                android:textStyle="bold" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnCurrencyExchange"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/btn_currency_exchange"
                android:textSize="15sp"
                android:backgroundTint="@color/blue"
                app:strokeWidth="2dp"
                app:strokeColor="@color/white"
                android:textStyle="bold" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnViewTransaction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/btn_view_transaction"
                android:textSize="15sp"
                android:backgroundTint="@color/blue"
                app:strokeWidth="2dp"
                app:strokeColor="@color/white"
                android:textStyle="bold" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnCalculator"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/btn_calculator"
                android:textSize="15sp"
                android:backgroundTint="@color/blue"
                app:strokeWidth="2dp"
                app:strokeColor="@color/white"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>

</androidx.wear.widget.BoxInsetLayout>
